# cerebrumma

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  ROADMAP.md  config.default.json  install.sh
.claude/: settings.json
.cursor/: mcp.json
.github/workflows/: release.yml
mcp_server/: pyproject.toml
mcp_server/src/cerebrumma_mcp/: server.py
src/: cli.rs  config.rs  daemon.rs  dreamer.rs  git.rs  main.rs  memory.rs  ui.rs  vector.rs
templates/: audit_prompt.md  brain_3d.html  brain_map.html  welcome.md
