[package]
name = "cerebrumma"
version = "0.1.2"
edition = "2021"
authors = ["Ben Peralta <benperalta24@gmail.com>"]
description = "Portable, git-tracked AI Brain for developers"
license = "MIT OR Apache-2.0"

[[bin]]
name = "cerebrum"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
anyhow = "1.0"
colored = "2.1"
dirs = "5.0"
notify = { version = "6.1", default-features = false, features = ["macos_fsevent"] }
tokio = { version = "1.0", features = ["full"] }
