[project]
name = "cerebrumma-mcp"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0",
    "pyyaml>=6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cerebrumma_mcp"]

[project.scripts]
cerebrumma-mcp = "cerebrumma_mcp.server:run"
